# Clinic_backend/doctor/routes.py
@@ -1,6 +1,6 @@
 from flask import Blueprint, request, jsonify
-from Clinic_backend.Doctor.services import availability_service
-from Clinic_backend.Doctor.schemas.availability_schema import availability_schema, availabilities_schema
+from Clinic_backend.doctor.services import availability_service
+from Clinic_backend.doctor.schemas.availability_schema import availability_schema, availabilities_schema
 from Clinic_backend.common.rbac import role_required
 from Clinic_backend.common.models.user import Role
 
